--- a/website/templates/master.html
+++ b/website/templates/master.html
@@ -16,6 +16,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">	
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 	<script src="https://unpkg.com/showdown/dist/showdown.min.js"></script>
+	<script src="https://unpkg.com/htmx.org@1.9.9"></script>
 	<script src="{{ url_for('static', filename='js/master.js') }}"></script>
 	<title>{{ title }} | Wayfarer {{ cruleset.name }}</title>
 	{% block head %}{% endblock %}
