--- a/website/templates/feat.html
+++ b/website/templates/feat.html
@@ -14,7 +14,7 @@
         <div class="usercontent" x-html="convert(`{{ feat.text }}`)"></div>
         {% if cruleset.userid == current_user.id %}
         <div class="interior flex horizontal center">
-            <a style="width: auto; margin: 12px" href="{{ url_for('epchar.duplicateFeat', feat=feat.name, ruleset=cruleset.identifier) }}"><button type="button">Duplicate {{ feat.name }}</button></a>
+            <a style="width: auto; margin: 12px"><button type="button" hx-post="{{ url_for('epchar.duplicateFeat', feat=feat.name, ruleset=cruleset.identifier) }}" hx-swap="outerHTML">Duplicate {{ feat.name }}</button></a>
             <a style="width: auto; margin: 12px" href="{{ url_for('epchar.editFeat', feat=feat.name, ruleset=cruleset.identifier) }}"><button type=button>Edit {{ feat.name }}</button></a>
             <a style="width: auto; margin: 12px" href="{{ url_for('epchar.deleteFeat', feat=feat.name, ruleset=cruleset.identifier) }}"><button type="button" class="mild danger">Delete {{ feat.name }}</button></a>
         </div>
